src/objects/UST_Event_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Registrant_Other_Phone__c</fullName>
        <description>If registrant type is other for a student registration this is the other phone number.</description>
        <inlineHelpText>If registrant type is other for a student registration this is the other phone number.</inlineHelpText>
        <label>Registrant Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrant_Other_Relationship__c</fullName>
        <description>This is the relationship to the student of clients who sign up students as type other.</description>
        <inlineHelpText>This is the relationship to the student of clients who sign up students as type other.</inlineHelpText>
        <label>Registrant Other Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registrant_Parent_Email__c</fullName>
        <description>Email of the parent of the student registered for the event.</description>
        <inlineHelpText>Email of the parent of the student registered for the event.</inlineHelpText>
        <label>Registrant Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Registrant_Parent_First_Name__c</fullName>
        <description>First name of the parent of person registering for the event</description>
        <inlineHelpText>First name of the parent of person registering for the event</inlineHelpText>
        <label>Registrant Parent First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Parent_Last_Name__c</fullName>
        <description>Last name of parent of person registered for the event.</description>
        <inlineHelpText>Last name of parent of person registered for the event.</inlineHelpText>
        <label>Registrant Parent Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Parent_Phone__c</fullName>
        <description>Phone number for the parent of the student registering for the event.</description>
        <inlineHelpText>Phone number for the parent of the student registering for the event.</inlineHelpText>
        <label>Registrant Parent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrant_Parent_Status__c</fullName>
        <description>Determines if the registrant is a student or a parent.</description>
        <inlineHelpText>Determines if the registrant is a student or a parent.</inlineHelpText>
        <label>Registrant Parent Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The student</fullName>
                </value>
                <value>
                    <fullName>A student&apos;s parent/guardian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_Phone__c</fullName>
        <description>The phone number reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The phone number reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registrant_Postal_Code__c</fullName>
        <description>Registrant Postal Code populated by international event registration.</description>
        <inlineHelpText>Registrant Postal Code populated by international event registration.</inlineHelpText>
        <label>Registrant Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Preferred_First_Name__c</fullName>
        <description>A registrants preferred name (may be a nick name)</description>
        <inlineHelpText>A registrants preferred name (may be a nick name)</inlineHelpText>
        <label>Registrant Preferred First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registrant_Program_Interest__c</fullName>
        <description>The program the registrant expressed interest in learning about.</description>
        <inlineHelpText>The program the registrant expressed interest in learning about.</inlineHelpText>
        <label>Registrant Program Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registrant_Receive_Texts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The preference to receive text messages reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The preference to receive text messages reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Receive Texts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registrant_State_Province__c</fullName>
        <label>Registrant State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_State__c</fullName>
        <description>The state reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The state reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Street_1__c</fullName>
        <description>The street 1 reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The street 1 reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Street 1</label>
        <length>95</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Street_2__c</fullName>
        <description>The street 2 reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The street 2 reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Street 2</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registrant_Zip__c</fullName>
        <description>The zip code reported by the event registrant upon registering. This may not be the same as on the contact record.</description>
        <inlineHelpText>The zip code reported by the event registrant upon registering. This may not be the same as on the contact record.</inlineHelpText>
        <label>Registrant Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Origin__c</fullName>
        <description>This field displays how the registration was entered.  The default value is Online, but can be manually adjusted to show if someone calls the office to be entered or was entered onsite.</description>
        <inlineHelpText>This field displays how the registration was entered.  The default value is Online, but can be manually adjusted to show if someone calls the office to be entered or was entered onsite.</inlineHelpText>
        <label>Registration Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <default>true</default>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Coach Request</fullName>
                    <isActive>false</isActive>
                    <label>Coach Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_St_Thomas__c</fullName>
        <label>Relationship to St. Thomas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Current Student</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Prospective Student</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Faculty/Staff</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Call_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the attendee been called to remind them of the event?</description>
        <inlineHelpText>Has the attendee been called to remind them of the event?</inlineHelpText>
        <label>Reminder Call Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time_Text__c</fullName>
        <formula>IF(DATEVALUE(Event_Instance__r.Start_Date_Time__c) &gt;= DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 3, 1) + (14 - CASE(MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 3, 1) - DATE(1900, 1, 7), 7), 0, 7, MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 3, 1) - DATE(1900, 1, 7), 7))) &amp;&amp;
    DATEVALUE(Event_Instance__r.Start_Date_Time__c) &lt;
    DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 11, 1) +
    (
        7 -
        CASE(MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 11, 1) - DATE(1900, 1, 7), 7),
            0, 7, MOD(DATE(YEAR(DATEVALUE(Event_Instance__r.Start_Date_Time__c)), 11, 1) - DATE(1900, 1, 7), 7))
    ),
    /*Daylight saving ENDS*/
    IF(
        VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5), 2)) = 12,
        MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5) + &apos; PM&apos;,

        IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5), 2)) &lt; 12,
            IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5), 2)) = 00, TEXT(12) +
                MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 14, 3),
                IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5), 2)) &lt; 10,
                    MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 13, 4), MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 5))) + &apos; AM&apos;,
            TEXT(VALUE(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 12, 2)) - 12) + MID(TEXT(Event_Instance__r.Start_Date_Time__c - 5 / 24), 14, 3) + &apos; PM&apos;)),

    /*Daylight saving STARTS*/
  IF(
        VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5), 2)) = 12,
        MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5) + &apos; PM&apos;,

        IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5), 2)) &lt; 12,
            IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5), 2)) = 00, TEXT(12) +
                MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 14, 3),
                IF(VALUE(LPAD(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5), 2)) &lt; 10,
                    MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 13, 4), MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 5))) + &apos; AM&apos;,
            TEXT(VALUE(MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 12, 2)) - 12) + MID(TEXT(Event_Instance__r.Start_Date_Time__c - 6 / 24), 14, 3) + &apos; PM&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Visit/Event</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Not Planning to Attend</fullName>
                    <isActive>false</isActive>
                    <label>Not Planning to Attend</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substatus__c</fullName>
        <label>Substatus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Appointments</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>All Appointments Confirmed</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Attended - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Checked-in</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Attended - walk in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Appointments__c</fullName>
        <label>Total Appointments</label>
        <summaryForeignKey>UST_Event_Appointments__c.Event_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Confirmed_Appointments__c</fullName>
        <label>Total Confirmed Appointments</label>
        <summaryFilterItems>
            <field>UST_Event_Appointments__c.Appointment_Status__c</field>
            <operation>notEqual</operation>
            <value>Registered, Pending First Request, Pending Second Request, Pending Final Request</value>
        </summaryFilterItems>
        <summaryForeignKey>UST_Event_Appointments__c.Event_Registration__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Guests__c</fullName>
        <description>Total Number of Guests INCLUDING the student</description>
        <formula>Number_of_Guests__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UG_Parking_Pass_Link__c</fullName>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;usteventparkingpass?regId=&quot;
&amp; Id
,&quot;Parking Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UG Parking Pass Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfc_interview_link__c</fullName>
        <formula>Contact__r.DFC_Interview_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dfc interview link</label>
        <type>Text</type>
    </fields>
    <label>UST Event Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Event__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Event_Instance__c</columns>
        <columns>Contact__c</columns>
        <columns>Session__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fall_Tommie_Day_Registration_2018_1</fullName>
        <columns>NAME</columns>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>Actual_Number_of_Guests__c</columns>
        <columns>Total_Number_of_Guests__c</columns>
        <columns>Registrant_High_School__c</columns>
        <columns>Date__c</columns>
        <columns>Instance_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Name__c</field>
            <operation>equals</operation>
            <value>Fall Tommie Days</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>10/18/2018</value>
        </filters>
        <filters>
            <field>Instance_Title__c</field>
            <operation>equals</operation>
            <value>Morning Session</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Fall Tommie Day Registration 2018 #1</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fall_Tommie_Day_Registration_2018_2</fullName>
        <columns>NAME</columns>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>Actual_Number_of_Guests__c</columns>
        <columns>Total_Number_of_Guests__c</columns>
        <columns>Registrant_High_School__c</columns>
        <columns>Date__c</columns>
        <columns>Instance_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Name__c</field>
            <operation>equals</operation>
            <value>Fall Tommie Days</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>10/18/2018</value>
        </filters>
        <filters>
            <field>Instance_Title__c</field>
            <operation>equals</operation>
            <value>Afternoon Session</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Fall Tommie Day Registration 2018 #2</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fall_Tommie_Day_Registration_2018_3</fullName>
        <columns>NAME</columns>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>Actual_Number_of_Guests__c</columns>
        <columns>Total_Number_of_Guests__c</columns>
        <columns>Registrant_High_School__c</columns>
        <columns>Date__c</columns>
        <columns>Instance_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Name__c</field>
            <operation>equals</operation>
            <value>Fall Tommie Days</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>10/19/2018</value>
        </filters>
        <filters>
            <field>Instance_Title__c</field>
            <operation>equals</operation>
            <value>Morning Session</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Fall Tommie Day Registration 2018 #3</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fall_Tommie_Day_Registration_2018_4</fullName>
        <columns>NAME</columns>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>Actual_Number_of_Guests__c</columns>
        <columns>Total_Number_of_Guests__c</columns>
        <columns>Registrant_High_School__c</columns>
        <columns>Date__c</columns>
        <columns>Instance_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Name__c</field>
            <operation>equals</operation>
            <value>Fall Tommie Days</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>10/19/2018</value>
        </filters>
        <filters>
            <field>Instance_Title__c</field>
            <operation>equals</operation>
            <value>Afternoon Session</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Fall Tommie Day Registration 2018 #4</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Group_Visit_Requests</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Event_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Group Visit</value>
        </filters>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:60</value>
        </filters>
        <label>Group Visit Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Info_Sessions_Next_7_Days</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Event_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Daily Visit</value>
        </filters>
        <label>Daily Visits - Next 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Info_Sessions_Next_7_Days1</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance_Title__c</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Event_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Information Sessions,Saturday Information Sessions</value>
        </filters>
        <label>Info Sessions - Next 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Personalized_Visits_Next_7_Days</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Event_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Personalized Visits,Transfer Personalized Visits,DFC Personalized Visits</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Transfer Saturday Visits</value>
        </filters>
        <label>Personalized Visits - Next 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Saturday_Visits_Next_7_Days</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance__c</columns>
        <columns>Event_Instance_Title__c</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Transfer Visits</value>
        </filters>
        <label>Transfer Visits - Next 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Saturday_Visits_Next_7_Days1</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance_Title__c</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Registrant_Email__c</columns>
        <columns>Event_Instance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Saturday Visits,Transfer Visits</value>
        </filters>
        <label>Saturday Visits - Next 7 Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Spring_Orientation_2020</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Event_Instance__c</columns>
        <columns>Event_Instance_Title__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Undergraduate Spring Orientation</value>
        </filters>
        <label>Spring Orientation 2020</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_List</fullName>
        <columns>NAME</columns>
        <columns>Registrant_First_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Date__c</columns>
        <columns>Registrant_High_School__c</columns>
        <columns>Status__c</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Test List</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Visits</fullName>
        <columns>NAME</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Date__c</columns>
        <columns>Number_of_Guests__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <columns>Registrant_High_School_Grad_Year__c</columns>
        <columns>Registrant_Mobile_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Visits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Transfer_Saturday_Visits_Next_30_Days</fullName>
        <columns>Registrant_First_Name__c</columns>
        <columns>Registrant_Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Event_Instance__c</columns>
        <columns>Event_Instance_Title__c</columns>
        <columns>Event_Instance_Name__c</columns>
        <columns>Event_Instance_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Substatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Instance_Date__c</field>
            <operation>equals</operation>
            <value>TODAY,NEXT_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Event_Instance_Name__c</field>
            <operation>equals</operation>
            <value>Transfer Saturday Visit</value>
        </filters>
        <label>Transfer Saturday Visits - Next 30  Days</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EVR-{000000}</displayFormat>
        <label>Campus Event Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Registrations</pluralLabel>
    <recordTypes>
        <fullName>AM_PM_Sessions</fullName>
        <active>true</active>
        <description>AM/PM Session Visit Days</description>
        <label>AM/PM Sessions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Campus_Visit</fullName>
        <active>false</active>
        <description>Individual Campus Visits - for Seniors and special requests</description>
        <label>Individual Campus Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>